@@ -1,3 +1,6 @@
+Fri Feb 27 11:07:20 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/tds/log.c src/tds/query.c: fix possible format problems
+
 Thu Feb 26 20:04:00 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* configure.ac src/dblib/bcp.c:
 	- fixes for MingW
@@ -1314,4 +1317,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2729 2009-02-26 19:04:10 freddy77 Exp $
+$Id: ChangeLog,v 1.2730 2009-02-27 10:07:34 freddy77 Exp $
